--- a/index.html
+++ b/index.html
@@ -10,9 +10,14 @@
 
     <div class="header">
         <h3>Header Logo</h1>
-        <a href="#">header link one</a>
-        <a href="#">header link two</a>
-        <a href="#">header link three</a>
+        
+        <div class="right-links">
+            <ul>
+                <li><a href="#">header link one</a></li>
+                <li><a href="#">header link two</a></li>
+                <li><a href="#">header link three</a></li>
+            </ul>
+        </div>
     </div>
 
     <div class="headerlower">
