remove headerlower styling and add social images

--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
 
     <div class="footer">
         <div class="socials">
-            <a href="#"><img src="#">Twitter</a>
-            <a href="#"><img src="#">Github</a>
-            <a href="#"><img src="#">LinkedIn</a>
+            <a href="#"><img src="./images/social-media-icons/twitter.png">Twitter</a>
+            <a href="#"><img src="./images/social-media-icons/github.png">Github</a>
+            <a href="#"><img src="./images/social-media-icons/linkedin.png">LinkedIn</a>
         </div>
     </div>
 </body>
