resolve the issue with the body placement not being correct

--- a/index.html
+++ b/index.html
@@ -22,8 +22,10 @@
 
     <div class="headerlower">
         <h2>Generic Header</h2>
-        <img src="#" alt="#">
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ornare massa eget egestas purus viverra accumsan in nisl nisi. Varius duis at consectetur lorem donec massa sapien. Imperdiet massa tincidunt nunc pulvinar sapien et. Felis eget nunc lobortis mattis aliquam faucibus. In est ante in nibh mauris. Nisl nunc mi ipsum faucibus vitae aliquet. Laoreet suspendisse interdum consectetur libero id faucibus nisl. Placerat in egestas erat imperdiet sed. Fringilla phasellus faucibus scelerisque eleifend donec pretium vulputate sapien. Mattis ullamcorper velit sed ullamcorper morbi tincidunt.</p>
+        <div class="image-place">
+            <img src="#" alt="#">
+        </div>
     </div>
 
     <div class="midline">
