align imgline and add image placeholders

--- a/index.html
+++ b/index.html
@@ -31,14 +31,22 @@
     <div class="midline">
         <h3>Random Section Header</h3>
         <div class="imgline">
-            <img src="#" alt="#">
-            <p>Lorem ipsum</p>
-            <img src="#" alt="#">
-            <p>Lorem ipsum</p>
-            <img src="#" alt="#">
-            <p>Lorem ipsum</p>
-            <img src="#" alt="#">
-            <p>Lorem ipsum</p>
+            <div class="align-img">
+                <img src="#" alt="#" class="square">
+                <p>Lorem ipsum</p>
+            </div>
+            <div class="align-img">
+                <img src="#" alt="#" class="square">
+                <p>Lorem ipsum</p>
+            </div>
+            <div class="align-img">
+                <img src="#" alt="#" class="square">
+                <p>Lorem ipsum</p>
+            </div>
+            <div class="align-img">
+                <img src="#" alt="#" class="square">
+                <p>Lorem ipsum</p>
+            </div>
         </div>
     </div>
 
