--- a/index.html
+++ b/index.html
@@ -21,9 +21,11 @@
     </div>
 
     <div class="headerlower">
-        <h2>Generic Header</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ornare massa eget egestas purus viverra accumsan in nisl nisi. Varius duis at consectetur lorem donec massa sapien. Imperdiet massa tincidunt nunc pulvinar sapien et. Felis eget nunc lobortis mattis aliquam faucibus. In est ante in nibh mauris. Nisl nunc mi ipsum faucibus vitae aliquet. Laoreet suspendisse interdum consectetur libero id faucibus nisl. Placerat in egestas erat imperdiet sed. Fringilla phasellus faucibus scelerisque eleifend donec pretium vulputate sapien. Mattis ullamcorper velit sed ullamcorper morbi tincidunt.</p>
-        <div class="image-place">
+        <div class="hl-img">
+            <h2>Generic Header</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ornare massa eget egestas purus viverra accumsan in nisl nisi. Varius duis at consectetur lorem donec massa sapien. Imperdiet massa tincidunt nunc pulvinar sapien et. Felis eget nunc lobortis mattis aliquam faucibus. In est ante in nibh mauris. Nisl nunc mi ipsum faucibus vitae aliquet. Laoreet suspendisse interdum consectetur libero id faucibus nisl. Placerat in egestas erat imperdiet sed. Fringilla phasellus faucibus scelerisque eleifend donec pretium vulputate sapien. Mattis ullamcorper velit sed ullamcorper morbi tincidunt.</p>
+        </div>
+        <div class="hl-img-two">
             <img src="#" alt="#">
         </div>
     </div>
