complete bones and proceed to design

--- a/index.html
+++ b/index.html
@@ -8,19 +8,21 @@
 
 <body>
 
-    <div class="header">
-        <h3>Header Logo</h1>
-        
-        <div class="right-links">
-            <ul>
-                <li><a href="#">header link one</a></li>
-                <li><a href="#">header link two</a></li>
-                <li><a href="#">header link three</a></li>
-            </ul>
-        </div>
-    </div>
+    <div class="flex-wrapper">
 
-    <div class="headerlower">
+        <div class="header">
+            <h3>Header Logo</h1>
+        
+            <div class="right-links">
+                <ul>
+                    <li><a href="#">header link one</a></li>
+                    <li><a href="#">header link two</a></li>
+                    <li><a href="#">header link three</a></li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="headerlower">
         <div class="hl-img">
             <h2>Generic Header</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ornare massa eget egestas purus viverra accumsan in nisl nisi. Varius duis at consectetur lorem donec massa sapien. Imperdiet massa tincidunt nunc pulvinar sapien et. Felis eget nunc lobortis mattis aliquam faucibus. In est ante in nibh mauris. Nisl nunc mi ipsum faucibus vitae aliquet. Laoreet suspendisse interdum consectetur libero id faucibus nisl. Placerat in egestas erat imperdiet sed. Fringilla phasellus faucibus scelerisque eleifend donec pretium vulputate sapien. Mattis ullamcorper velit sed ullamcorper morbi tincidunt.</p>
@@ -28,9 +30,9 @@
         <div class="hl-img-two">
             <img src="#" alt="#">
         </div>
-    </div>
+        </div>
 
-    <div class="midline">
+        <div class="midline">
         <h3>Random Section Header</h3>
         <div class="imgline">
             <div class="align-img">
@@ -50,24 +52,25 @@
                 <p>Lorem ipsum</p>
             </div>
         </div>
-    </div>
+        </div>
 
-    <div class="botline">
+        <div class="botline">
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ornare massa eget egestas purus viverra accumsan in nisl nisi. Varius duis at consectetur lorem donec massa sapien. Imperdiet massa tincidunt nunc pulvinar sapien et. Felis eget nunc lobortis mattis aliquam faucibus. In est ante in nibh mauris. Nisl nunc mi ipsum faucibus vitae aliquet. Laoreet suspendisse interdum consectetur libero id faucibus nisl. Placerat in egestas erat imperdiet sed. Fringilla phasellus faucibus scelerisque eleifend donec pretium vulputate sapien. Mattis ullamcorper velit sed ullamcorper morbi tincidunt.</p>
-    </div>
+        </div>
 
-    <div class="sign-up">
+        <div class="sign-up">
         <div class="box">
             <p>Lorem Ipsum</p>
             <button>Sign up</button>
         </div>
-    </div>
+        </div>
 
-    <div class="footer">
-        <div class="socials">
-            <a href="#"><img src="./images/social-media-icons/twitter.png">Twitter</a>
-            <a href="#"><img src="./images/social-media-icons/github.png">Github</a>
-            <a href="#"><img src="./images/social-media-icons/linkedin.png">LinkedIn</a>
+        <div class="footer">
+            <div class="socials">
+                <a href="#"><img src="./images/social-media-icons/twitter.png">Twitter</a>
+                <a href="#"><img src="./images/social-media-icons/github.png">Github</a>
+                <a href="#"><img src="./images/social-media-icons/linkedin.png">LinkedIn</a>
+            </div>
         </div>
     </div>
 </body>
