add buttons and begin work on general design

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <div class="hl-img">
             <h2>Generic Header</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ornare massa eget egestas purus viverra accumsan in nisl nisi. Varius duis at consectetur lorem donec massa sapien. Imperdiet massa tincidunt nunc pulvinar sapien et. Felis eget nunc lobortis mattis aliquam faucibus. In est ante in nibh mauris. Nisl nunc mi ipsum faucibus vitae aliquet. Laoreet suspendisse interdum consectetur libero id faucibus nisl. Placerat in egestas erat imperdiet sed. Fringilla phasellus faucibus scelerisque eleifend donec pretium vulputate sapien. Mattis ullamcorper velit sed ullamcorper morbi tincidunt.</p>
+            <button>Sign up</button>
         </div>
         <div class="hl-img-two">
             <img src="#" alt="#">
@@ -60,16 +61,20 @@
 
         <div class="sign-up">
         <div class="box">
-            <p>Lorem Ipsum</p>
+            <div>
+                <p>Lorem Ipsum</p>
+                <p>Lorem Ipsum or wtvr</p>
+            </div>
             <button>Sign up</button>
+            
         </div>
         </div>
 
         <div class="footer">
             <div class="socials">
-                <a href="#"><img src="./images/social-media-icons/twitter.png">Twitter</a>
-                <a href="#"><img src="./images/social-media-icons/github.png">Github</a>
-                <a href="#"><img src="./images/social-media-icons/linkedin.png">LinkedIn</a>
+                <a href="https://twitter.com/JehovasNES"><img src="./images/social-media-icons/twitter.png" alt="Twitter"></a>
+                <a href="https://github.com/JehovasNES"><img src="./images/social-media-icons/github.png" alt="Github"></a>
+                <a href="#"><img src="./images/social-media-icons/linkedin.png" alt="LinkedIn, currently inactive"></a>
             </div>
         </div>
     </div>
