--- a/index.html
+++ b/index.html
@@ -61,12 +61,12 @@
 
         <div class="sign-up">
         <div class="box">
-            <div>
-                <p>Lorem Ipsum</p>
-                <p>Lorem Ipsum or wtvr</p>
+                <div class="mvbox">
+                    <p>Lorem Ipsum</p>
+                    <h6>Lorem Ipsum or wtvr</h6>
+                </div>
+                <button>Sign up</button>
             </div>
-            <button>Sign up</button>
-            
         </div>
         </div>
 
