complete social links

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             <div class="socials">
                 <a href="https://twitter.com/JehovasNES"><img src="./images/social-media-icons/twitter.png" alt="Twitter"></a>
                 <a href="https://github.com/JehovasNES"><img src="./images/social-media-icons/github.png" alt="Github"></a>
-                <a href="#"><img src="./images/social-media-icons/linkedin.png" alt="LinkedIn, currently inactive"></a>
+                <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"><img src="./images/social-media-icons/linkedin.png" alt="LinkedIn, currently inactive"></a>
             </div>
         </div>
     </div>
