--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <link rel="stylesheet" href="./style.css">
     <head>
-        <title>Homepage</title>
+        <title>MTG:Artifacts Fanpage</title>
         <meta charset="UTF-8">
     </head>
 
@@ -11,13 +11,13 @@
     <div class="flex-wrapper">
 
         <div class="header">
-            <h3>Header Logo</h1>
+            <a href=""><img src="./images/imgline/colorless.png" class="artifact"></a>
         
             <div class="right-links">
                 <ul>
-                    <li><a href="#">header link one</a></li>
-                    <li><a href="#">header link two</a></li>
-                    <li><a href="#">header link three</a></li>
+                    <li><a href="https://gatherer.wizards.com/Pages/Search/Default.aspx?type=+[Artifact]">MTG Gatherer Artifacts</a></li>
+                    <li><a href="https://edhrec.com/top/artifacts">Top 100 Artifacts</a></li>
+                    <li><a href="https://mtg.fandom.com/wiki/Artifact">Artifact Wiki</a></li>
                 </ul>
             </div>
         </div>
