--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
 
         <div class="headerlower">
         <div class="hl-img">
-            <h2>Generic Header</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ornare massa eget egestas purus viverra accumsan in nisl nisi. Varius duis at consectetur lorem donec massa sapien. Imperdiet massa tincidunt nunc pulvinar sapien et. Felis eget nunc lobortis mattis aliquam faucibus. In est ante in nibh mauris. Nisl nunc mi ipsum faucibus vitae aliquet. Laoreet suspendisse interdum consectetur libero id faucibus nisl. Placerat in egestas erat imperdiet sed. Fringilla phasellus faucibus scelerisque eleifend donec pretium vulputate sapien. Mattis ullamcorper velit sed ullamcorper morbi tincidunt.</p>
+            <h2>Artifact Fan Club</h2>
+            <p>Welcome to the best Magic: The Gathering Artifacts Fan Club in the multiverse. If you have the interest in discovering more information about artifacts, finding the most unique, and talking with people who also love artifacts, you should join us in the Artifact Fan Club! Please feel free to join us on Discord using the link at the bottom of the page and sign-up for our mail list using the sign-up link below!</p>
             <button>Sign up</button>
         </div>
         <div class="hl-img-two">
-            <img src="#" alt="#">
+            <img src="./images/imgline/nevdisc.jpg" alt="Nevinyrrals Disk">
         </div>
         </div>
 
