complete and correct midline

--- a/index.html
+++ b/index.html
@@ -34,23 +34,23 @@
         </div>
 
         <div class="midline">
-        <h3>Random Section Header</h3>
+        <h3>My Personal Favorites</h3>
         <div class="imgline">
             <div class="align-img">
-                <img src="#" alt="#" class="square">
-                <p>Lorem ipsum</p>
+                <img src="./images/imgline/solring.jpg" alt="Sol-Ring" class="square">
+                <p>Sol-Ring</p>
             </div>
             <div class="align-img">
-                <img src="#" alt="#" class="square">
-                <p>Lorem ipsum</p>
+                <img src="./images/imgline/hog.jpg" alt="Hope of Ghirapur" class="square">
+                <p>Hope of Ghirapur</p>
             </div>
             <div class="align-img">
-                <img src="#" alt="#" class="square">
-                <p>Lorem ipsum</p>
+                <img src="./images/imgline/sentop.jpeg" alt="Sensei's Divining Top" class="square">
+                <p>Sensei's Divining Top</p>
             </div>
             <div class="align-img">
-                <img src="#" alt="#" class="square">
-                <p>Lorem ipsum</p>
+                <img src="./images/imgline/therack.jpg" alt="The Rack" class="square">
+                <p>The Rack</p>
             </div>
         </div>
         </div>
