--- a/index.html
+++ b/index.html
@@ -56,7 +56,10 @@
         </div>
 
         <div class="botline">
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ornare massa eget egestas purus viverra accumsan in nisl nisi. Varius duis at consectetur lorem donec massa sapien. Imperdiet massa tincidunt nunc pulvinar sapien et. Felis eget nunc lobortis mattis aliquam faucibus. In est ante in nibh mauris. Nisl nunc mi ipsum faucibus vitae aliquet. Laoreet suspendisse interdum consectetur libero id faucibus nisl. Placerat in egestas erat imperdiet sed. Fringilla phasellus faucibus scelerisque eleifend donec pretium vulputate sapien. Mattis ullamcorper velit sed ullamcorper morbi tincidunt.</p>
+            <div>Best Artifact Flavour Text</div>
+            <p>"The renegades mounted an aether disruptor aboard a lightweight thopter to destro Tezzert's Planar Bridge." -Hope of Ghirapur</p>
+            <p>"In the blur between metal and flesh, Memnarch found madness." -Memnarch</p>
+            <p>"If there can be no victory, then I will fight forever." -Darksteel Plate</p>
         </div>
 
         <div class="sign-up">
