complete sign-up and box

--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
         <div class="sign-up">
         <div class="box">
                 <div class="mvbox">
-                    <p>Lorem Ipsum</p>
-                    <h6>Lorem Ipsum or wtvr</h6>
+                    <p>Feel interested in joining us yet?</p>
+                    <h6>Click the button to the right to join our Discord today!</h6>
                 </div>
-                <button>Sign up</button>
+                <a href="https://discord.gg/gxSsBJXt">Sign up</button>
             </div>
         </div>
         </div>
