complete social linking and sign up

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="flex-wrapper">
 
         <div class="header">
-            <a href=""><img src="./images/imgline/colorless.png" class="artifact"></a>
+            <a href="https://discord.gg/gxSsBJXt"><img src="./images/imgline/colorless.png" class="artifact"></a>
         
             <div class="right-links">
                 <ul>
@@ -26,7 +26,7 @@
         <div class="hl-img">
             <h2>Artifact Fan Club</h2>
             <p>Welcome to the best Magic: The Gathering Artifacts Fan Club in the multiverse. If you have the interest in discovering more information about artifacts, finding the most unique, and talking with people who also love artifacts, you should join us in the Artifact Fan Club! Please feel free to join us on Discord using the link at the bottom of the page and sign-up for our mail list using the sign-up link below!</p>
-            <button>Sign up</button>
+            <a href="https://discord.gg/gxSsBJXt">Sign up</a>
         </div>
         <div class="hl-img-two">
             <img src="./images/imgline/nevdisc.jpg" alt="Nevinyrrals Disk">
@@ -57,7 +57,7 @@
 
         <div class="botline">
             <div>Best Artifact Flavour Text</div>
-            <p>"The renegades mounted an aether disruptor aboard a lightweight thopter to destro Tezzert's Planar Bridge." -Hope of Ghirapur</p>
+            <p>"The renegades mounted an aether disruptor aboard a lightweight thopter to destroy Tezzert's Planar Bridge." -Hope of Ghirapur</p>
             <p>"In the blur between metal and flesh, Memnarch found madness." -Memnarch</p>
             <p>"If there can be no victory, then I will fight forever." -Darksteel Plate</p>
         </div>
@@ -68,7 +68,7 @@
                     <p>Feel interested in joining us yet?</p>
                     <h6>Click the button to the right to join our Discord today!</h6>
                 </div>
-                <a href="https://discord.gg/gxSsBJXt">Sign up</button>
+                <a href="https://discord.gg/gxSsBJXt">Sign up</a>
             </div>
         </div>
         </div>
